--- a/Figma.html
+++ b/Figma.html
@@ -14,7 +14,7 @@
   <!-- Navbar (dari halaman HTML & CSS) -->
   <nav class="navbar">
     <div class="logo">Rizky Mahdi Hutomo</div>
-    <a href="Home.html" class="back-btn">← Back to Portfolio</a>
+    <a href="index.html" class="back-btn">← Back to Portfolio</a>
   </nav>
 
   <!-- Figma Skills Section -->
