--- a/HTML.html
+++ b/HTML.html
@@ -13,7 +13,7 @@
     <!-- Navbar -->
     <nav class="navbar">
         <div class="logo">Rizky Mahdi Hutomo</div>
-        <a href="Home.html" class="back-btn">← Back to Portfolio</a>
+        <a href="index.html" class="back-btn">← Back to Portfolio</a>
     </nav>
 
     <!-- Hero Section -->
