--- a/index.html
+++ b/index.html
@@ -99,22 +99,34 @@
             <p>Oil Company & Job Recruitment Website</p>
         </a>
         <!-- Project 1: DECOREO -->
-        <a href="https://youtu.be/4h6GbPiKxm8" target="_blank" rel="noopener noreferrer" class="project-card">
-            <img src="Decoreo.png" alt="DECOREO">
-            <h3>DECOREO</h3>
+        <a href="https://www.figma.com/design/Bd1yHrlW7Eh8XT5qlBE3hh/CV-MultiTranz?node-id=0-1&t=88SODPUtHxYuC4df-1" target="_blank" rel="noopener noreferrer" class="project-card">
+            <img src="cv multz.jpg" alt="DECOREO">
+            <h3>CV. MultiTranz</h3>
             <p>Interior Design Service Website</p>
         </a>
         <!-- Project 1: DECOREO -->
-        <a href="https://youtu.be/4h6GbPiKxm8" target="_blank" rel="noopener noreferrer" class="project-card">
-            <img src="Decoreo.png" alt="DECOREO">
-            <h3>DECOREO</h3>
-            <p>Interior Design Service Website</p>
+        <a href="https://ranggaandika444.wixsite.com/samsatonline" target="_blank" rel="noopener noreferrer" class="project-card">
+            <img src="e samsat.jpg" alt="DECOREO">
+            <h3>E-Samsat</h3>
+            <p>Vehicle Tax E-Service: Do it from Home, No Queues.</p>
         </a>
         <!-- Project 1: DECOREO -->
         <a href="https://youtu.be/4h6GbPiKxm8" target="_blank" rel="noopener noreferrer" class="project-card">
             <img src="mgk.jpg" alt="DECOREO">
             <h3>Website PPDB SMK RAJASA SURABAYA</h3>
-            <p>Interior Design Service Website</p>
+            <p>Online PPDB of SMK Rajasa Surabaya: Register Now, No Hassle!</p>
+        </a>
+        <!-- Project 1: DECOREO -->
+        <a href="https://youtu.be/4h6GbPiKxm8" target="_blank" rel="noopener noreferrer" class="project-card">
+            <img src="dokter sehats.jpg" alt="DECOREO">
+            <h3>Dokter Sehat. Com</h3>
+            <p>The most complete health portal: Medical Articles, Doctor Directory, Discussion Forum.</p>
+        </a>
+         <!-- Project 1: DECOREO -->
+        <a href="https://www.figma.com/proto/tdwQKnzLafyFN7sLpIikKK/Pemodelan---PT-PELNI?node-id=1-2&p=f&t=ceibfjCrjJ2uRR2v-1&scaling=contain&content-scaling=fixed&page-id=0%3A1" target="_blank" rel="noopener noreferrer" class="project-card">
+            <img src="pt pelni.jpg" alt="DECOREO">
+            <h3>PT. PELNI</h3>
+            <p>Integrated Logistics, Seamless Connection! #WithPELNI</p>
         </a>
     </div>
 </section>
